[exp_019] cnn, tune epoch, 0.2022

--- a/train/ensemble.ipynb
+++ b/train/ensemble.ipynb
@@ -2,13 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "rm: cannot remove '/kaggle/working/*': No such file or directory\n",
       "/kaggle/working\n"
      ]
     }
@@ -20,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,18 +35,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2024-11-20 13:12:45.913633: I tensorflow/core/util/port.cc:113] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
-      "2024-11-20 13:12:45.939168: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
-      "To enable the following instructions: AVX2 AVX_VNNI FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -57,8 +49,6 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/opt/conda/lib/python3.10/pty.py:89: RuntimeWarning: os.fork() was called. os.fork() is incompatible with multithreaded code, and JAX is multithreaded, so this will likely lead to a deadlock.\n",
-      "  pid, fd = os.forkpty()\n",
       "set seed: 46\n"
      ]
     },
@@ -66,18 +56,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'cnn': {'execution': {'best_exp_id': 'exp_014',\n",
-      "                       'exp_id': 'exp_014',\n",
+      "{'cnn': {'execution': {'best_exp_id': 'exp_019',\n",
+      "                       'exp_id': 'exp_019',\n",
       "                       'seed': 46},\n",
       "         'optimizer': {'lr': 0.01},\n",
       "         'trainer': {'device': 'cuda',\n",
       "                     'direction': 'minimize',\n",
       "                     'es_patience': 20,\n",
       "                     'loss_window': 100000,\n",
-      "                     'max_epoch': 20,\n",
+      "                     'max_epoch': 15,\n",
       "                     'monitor': 'valid_MeanAbsoluteError'}},\n",
       " 'dataset': {'competition_dir': '/kaggle/input/atmaCup#18_dataset',\n",
       "             'train_fold_path': '/kaggle/input/cv-split/train_folds.csv'},\n",
+      " 'deberta': {'execution': {'best_exp_id': 'exp_018',\n",
+      "                           'exp_id': 'exp_018',\n",
+      "                           'seed': 46}},\n",
       " 'ensemble': {'execution': {'best_exp_id': 'ensemble_001',\n",
       "                            'exp_id': 'ensemble_001',\n",
       "                            'seed': 46},\n",
@@ -127,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,15 +153,16 @@
     "    \"ID\"\n",
     ")\n",
     "oof_cnn = pl.read_csv(os.path.join(\"/kaggle/output\", CFG[\"cnn\"][\"execution\"][\"best_exp_id\"], \"oof.csv\")).sort(\"ID\")\n",
+    "oof_cnn2 = pl.read_csv(os.path.join(\"/kaggle/output\", \"exp_014\", \"oof.csv\")).sort(\"ID\")\n",
     "\n",
     "oof = oof_xgb.clone()\n",
-    "oof = oof.with_columns([oof_xgb[c] * 0.4 + oof_cnn[c] * 0.6 for c in TARGET_COLS])\n",
+    "oof = oof.with_columns([oof_xgb[c] * 0.3 + oof_cnn[c] * 0.3 + oof_cnn2[c] * 0.4 for c in TARGET_COLS])\n",
     "oof.write_csv(os.path.join(CFG[\"output_dir\"], \"oof.csv\"))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,24 +172,25 @@
     "sub_cnn = pl.read_csv(os.path.join(\"/kaggle/output\", CFG[\"cnn\"][\"execution\"][\"best_exp_id\"], \"submission.csv\")).sort(\n",
     "    \"ID\"\n",
     ")\n",
+    "sub_cnn2 = pl.read_csv(os.path.join(\"/kaggle/output\", \"exp_014\", \"submission.csv\")).sort(\"ID\")\n",
     "\n",
     "sub = sub_xgb.clone()\n",
-    "sub = sub.with_columns([sub_xgb[c] * 0.3 + sub_cnn[c] * 0.7 for c in TARGET_COLS])\n",
+    "sub = sub.with_columns([sub_xgb[c] * 0.3 + sub_cnn[c] * 0.3 + sub_cnn2[c] * 0.4 for c in TARGET_COLS])\n",
     "sub.to_pandas()[TARGET_COLS].to_csv(os.path.join(CFG[\"output_dir\"], \"submission.csv\"), index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.19399180604548633"
+       "0.19297228100573321"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
