[exp020] cnn, reduce features [cv: 0.2021]

--- a/train/ensemble.ipynb
+++ b/train/ensemble.ipynb
@@ -2,14 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "rm: cannot remove '/kaggle/working/*': No such file or directory\n",
       "/kaggle/working\n"
      ]
     }
@@ -21,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,9 +34,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2024-11-21 17:28:05.052641: I tensorflow/core/util/port.cc:113] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
+      "2024-11-21 17:28:05.080823: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "To enable the following instructions: AVX2 AVX_VNNI FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -49,6 +57,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "/opt/conda/lib/python3.10/pty.py:89: RuntimeWarning: os.fork() was called. os.fork() is incompatible with multithreaded code, and JAX is multithreaded, so this will likely lead to a deadlock.\n",
+      "  pid, fd = os.forkpty()\n",
       "set seed: 46\n"
      ]
     },
@@ -56,8 +66,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'cnn': {'execution': {'best_exp_id': 'exp_019',\n",
-      "                       'exp_id': 'exp_019',\n",
+      "{'cnn': {'execution': {'best_exp_id': 'exp_020',\n",
+      "                       'exp_id': 'exp_020',\n",
       "                       'seed': 46},\n",
       "         'optimizer': {'lr': 0.01},\n",
       "         'trainer': {'device': 'cuda',\n",
@@ -120,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,13 +166,13 @@
     "oof_cnn2 = pl.read_csv(os.path.join(\"/kaggle/output\", \"exp_014\", \"oof.csv\")).sort(\"ID\")\n",
     "\n",
     "oof = oof_xgb.clone()\n",
-    "oof = oof.with_columns([oof_xgb[c] * 0.3 + oof_cnn[c] * 0.3 + oof_cnn2[c] * 0.4 for c in TARGET_COLS])\n",
+    "oof = oof.with_columns([oof_xgb[c] * 0.3 + oof_cnn[c] * 0.4 + oof_cnn2[c] * 0.3 for c in TARGET_COLS])\n",
     "oof.write_csv(os.path.join(CFG[\"output_dir\"], \"oof.csv\"))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,22 +185,22 @@
     "sub_cnn2 = pl.read_csv(os.path.join(\"/kaggle/output\", \"exp_014\", \"submission.csv\")).sort(\"ID\")\n",
     "\n",
     "sub = sub_xgb.clone()\n",
-    "sub = sub.with_columns([sub_xgb[c] * 0.3 + sub_cnn[c] * 0.3 + sub_cnn2[c] * 0.4 for c in TARGET_COLS])\n",
+    "sub = sub.with_columns([sub_xgb[c] * 0.3 + sub_cnn[c] * 0.4 + sub_cnn2[c] * 0.3 for c in TARGET_COLS])\n",
     "sub.to_pandas()[TARGET_COLS].to_csv(os.path.join(CFG[\"output_dir\"], \"submission.csv\"), index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.19297228100573321"
+       "0.19243838334857682"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
