--- a/train/ensemble.ipynb
+++ b/train/ensemble.ipynb
@@ -41,8 +41,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-11-21 17:28:05.052641: I tensorflow/core/util/port.cc:113] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
-      "2024-11-21 17:28:05.080823: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "2024-11-22 06:04:24.931470: I tensorflow/core/util/port.cc:113] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
+      "2024-11-22 06:04:25.503828: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
       "To enable the following instructions: AVX2 AVX_VNNI FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
      ]
     },
@@ -67,7 +67,7 @@
      "output_type": "stream",
      "text": [
       "{'cnn': {'execution': {'best_exp_id': 'exp_020',\n",
-      "                       'exp_id': 'exp_020',\n",
+      "                       'exp_id': 'exp_021',\n",
       "                       'seed': 46},\n",
       "         'optimizer': {'lr': 0.01},\n",
       "         'trainer': {'device': 'cuda',\n",
@@ -159,15 +159,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "oof_xgb = pl.read_csv(os.path.join(\"/kaggle/output\", CFG[\"lightgbm\"][\"execution\"][\"best_exp_id\"], \"oof.csv\")).sort(\n",
-    "    \"ID\"\n",
-    ")\n",
-    "oof_cnn = pl.read_csv(os.path.join(\"/kaggle/output\", CFG[\"cnn\"][\"execution\"][\"best_exp_id\"], \"oof.csv\")).sort(\"ID\")\n",
-    "oof_cnn2 = pl.read_csv(os.path.join(\"/kaggle/output\", \"exp_014\", \"oof.csv\")).sort(\"ID\")\n",
-    "\n",
-    "oof = oof_xgb.clone()\n",
-    "oof = oof.with_columns([oof_xgb[c] * 0.3 + oof_cnn[c] * 0.4 + oof_cnn2[c] * 0.3 for c in TARGET_COLS])\n",
-    "oof.write_csv(os.path.join(CFG[\"output_dir\"], \"oof.csv\"))"
+    "weights = [0.3, 0.4, 0.3]"
    ]
   },
   {
@@ -176,31 +168,50 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sub_xgb = pl.read_csv(\n",
-    "    os.path.join(\"/kaggle/output\", CFG[\"lightgbm\"][\"execution\"][\"best_exp_id\"], \"submission.csv\")\n",
-    ").sort(\"ID\")\n",
-    "sub_cnn = pl.read_csv(os.path.join(\"/kaggle/output\", CFG[\"cnn\"][\"execution\"][\"best_exp_id\"], \"submission.csv\")).sort(\n",
+    "oof_xgb = pl.read_csv(os.path.join(\"/kaggle/output\", CFG[\"lightgbm\"][\"execution\"][\"best_exp_id\"], \"oof.csv\")).sort(\n",
     "    \"ID\"\n",
     ")\n",
-    "sub_cnn2 = pl.read_csv(os.path.join(\"/kaggle/output\", \"exp_014\", \"submission.csv\")).sort(\"ID\")\n",
+    "oof_cnn = pl.read_csv(\"/kaggle/output/exp_021/lr0.01_max_epoch15_hidden_dim1024_num_layer2_oof.csv\").sort(\"ID\")\n",
+    "oof_cnn2 = pl.read_csv(\"/kaggle/output/exp_014/oof.csv\").sort(\"ID\")\n",
     "\n",
-    "sub = sub_xgb.clone()\n",
-    "sub = sub.with_columns([sub_xgb[c] * 0.3 + sub_cnn[c] * 0.4 + sub_cnn2[c] * 0.3 for c in TARGET_COLS])\n",
-    "sub.to_pandas()[TARGET_COLS].to_csv(os.path.join(CFG[\"output_dir\"], \"submission.csv\"), index=False)"
+    "oof = oof_xgb.clone()\n",
+    "oof = oof.with_columns(\n",
+    "    [oof_xgb[c] * weights[0] + oof_cnn[c] * weights[1] + oof_cnn2[c] * weights[2] for c in TARGET_COLS]\n",
+    ")\n",
+    "oof.write_csv(os.path.join(CFG[\"output_dir\"], \"oof.csv\"))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "sub_xgb = pl.read_csv(\n",
+    "    os.path.join(\"/kaggle/output\", CFG[\"lightgbm\"][\"execution\"][\"best_exp_id\"], \"submission.csv\")\n",
+    ").sort(\"ID\")\n",
+    "sub_cnn = pl.read_csv(\"/kaggle/output/exp_021/lr0.01_max_epoch15_hidden_dim1024_num_layer2_sub.csv\").sort(\"ID\")\n",
+    "sub_cnn2 = pl.read_csv(\"/kaggle/output/exp_014/submission.csv\").sort(\"ID\")\n",
+    "\n",
+    "sub = sub_xgb.clone()\n",
+    "sub = sub.with_columns(\n",
+    "    [sub_xgb[c] * weights[0] + sub_cnn[c] * weights[1] + sub_cnn2[c] * weights[2] for c in TARGET_COLS]\n",
+    ")\n",
+    "sub.to_pandas()[TARGET_COLS].to_csv(os.path.join(CFG[\"output_dir\"], \"submission.csv\"), index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.19243838334857682"
+       "0.1913165114644536"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
