[exp_022] cnn, cv 0.1976

--- a/train/ensemble.ipynb
+++ b/train/ensemble.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,18 +34,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2024-11-22 06:04:24.931470: I tensorflow/core/util/port.cc:113] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
-      "2024-11-22 06:04:25.503828: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
-      "To enable the following instructions: AVX2 AVX_VNNI FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -57,8 +48,6 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/opt/conda/lib/python3.10/pty.py:89: RuntimeWarning: os.fork() was called. os.fork() is incompatible with multithreaded code, and JAX is multithreaded, so this will likely lead to a deadlock.\n",
-      "  pid, fd = os.forkpty()\n",
       "set seed: 46\n"
      ]
     },
@@ -66,8 +55,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'cnn': {'execution': {'best_exp_id': 'exp_020',\n",
-      "                       'exp_id': 'exp_021',\n",
+      "{'cnn': {'execution': {'best_exp_id': 'exp_022',\n",
+      "                       'exp_id': 'exp_022',\n",
       "                       'seed': 46},\n",
       "         'optimizer': {'lr': 0.01},\n",
       "         'trainer': {'device': 'cuda',\n",
@@ -130,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,14 +153,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
     "oof_xgb = pl.read_csv(os.path.join(\"/kaggle/output\", CFG[\"lightgbm\"][\"execution\"][\"best_exp_id\"], \"oof.csv\")).sort(\n",
     "    \"ID\"\n",
     ")\n",
-    "oof_cnn = pl.read_csv(\"/kaggle/output/exp_021/lr0.01_max_epoch15_hidden_dim1024_num_layer2_oof.csv\").sort(\"ID\")\n",
+    "oof_cnn = pl.read_csv(\"/kaggle/output/exp_022/oof.csv\").sort(\"ID\")\n",
     "oof_cnn2 = pl.read_csv(\"/kaggle/output/exp_014/oof.csv\").sort(\"ID\")\n",
     "\n",
     "oof = oof_xgb.clone()\n",
@@ -183,14 +172,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
     "sub_xgb = pl.read_csv(\n",
     "    os.path.join(\"/kaggle/output\", CFG[\"lightgbm\"][\"execution\"][\"best_exp_id\"], \"submission.csv\")\n",
     ").sort(\"ID\")\n",
-    "sub_cnn = pl.read_csv(\"/kaggle/output/exp_021/lr0.01_max_epoch15_hidden_dim1024_num_layer2_sub.csv\").sort(\"ID\")\n",
+    "sub_cnn = pl.read_csv(\"/kaggle/output/exp_022/submission.csv\").sort(\"ID\")\n",
     "sub_cnn2 = pl.read_csv(\"/kaggle/output/exp_014/submission.csv\").sort(\"ID\")\n",
     "\n",
     "sub = sub_xgb.clone()\n",
@@ -202,16 +191,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.1913165114644536"
+       "0.19059015157662482"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
