--- a/train/ensemble.ipynb
+++ b/train/ensemble.ipynb
@@ -2,13 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "/bin/bash: line 1: /usr/bin/rm: Argument list too long\n",
       "/kaggle/working\n"
      ]
     }
@@ -20,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,16 +192,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.19059015157662482"
+       "0.19058886246139312"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -208,6 +209,16 @@
    "source": [
     "mae = np.mean(np.abs(train[TARGET_COLS].to_numpy() - oof[[c for c in TARGET_COLS]].to_numpy()))\n",
     "mae"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test = pl.read_csv(os.path.join(CFG[\"dataset\"][\"competition_dir\"], \"test_features.csv\"))\n",
+    "assert (test[\"ID\"] == sub[\"ID\"]).all()"
    ]
   },
   {
